--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.github.triplet.play'
 
+def versionMajor = 1
+def versionMinor = 0
+def versionPatch = 0
+def versionBuild = 2
+
 ext {
     KEY_PATH = System.getenv("PUB_KEY_PATH")
     STORE_PASSWORD = System.getenv("PUB_STORE_PASSWORD")
@@ -9,27 +14,6 @@ ext {
     KEY_SERVICE_ACC = System.getenv("KEY_SERVICE_ACC")
 }
 android {
-    compileSdkVersion 28
-    defaultConfig {
-        applicationId "com.antonchaynikov.gppublish"
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-
-        compileOptions {
-            sourceCompatibility JavaVersion.VERSION_1_8
-            targetCompatibility JavaVersion.VERSION_1_8
-        }
-
-    }
     signingConfigs {
         release {
             storeFile file(KEY_PATH)
@@ -38,10 +22,30 @@ android {
             keyPassword KEY_PASSWORD
         }
     }
+    compileSdkVersion 28
+    defaultConfig {
+        applicationId "com.antonchaynikov.gppublish"
+        minSdkVersion 21
+        targetSdkVersion 28
+        versionCode versionMajor * 100000 + versionMinor * 10000 + versionPatch * 1000 + versionBuild
+        versionName "1.0"
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 play {
     serviceAccountCredentials = file(KEY_SERVICE_ACC)
+    track = "internal"
 }
 
 dependencies {
