--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,8 +156,8 @@ jobs:
           name: Download dependencies
           command: ./gradlew androidDependencies
       - run:
-          name: Deploy to Fabric Beta
-          command: ./gradlew publishRelease
+          name: Deploy to Google Play
+          command: ./gradlew publishReleaseApk
   
 workflows:
   version: 2
