--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,6 +151,7 @@ jobs:
       - checkout
       - *attach_release_workspace
       - *decode_service_key
+      - *decode_signing_key
       - *restore_cache
       - run:
           name: Download dependencies
